# Robomation_Python

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
robomation/: __init__.py
robomation/ai/: __init__.py  aruco_marker.py  aruco_marker_roboid.py  asr.py  asr_roboid.py  body_detection.py  body_detection_roboid.py  color_detection.py  color_detection_roboid.py  detailed_face_detection.py  detailed_face_detection_roboid.py  face_detection.py  face_detection_roboid.py  face_expression.py  face_expression_roboid.py  hand_detection.py  hand_detection_roboid.py  object_detection.py  object_detection_roboid.py  self_driving.py  self_driving_roboid.py
robomation/ai/_internal/: __init__.py  _camera.py  _display.py  _model.py
robomation/cheesestick_ext/: __init__.py  csd01.py  csd02.py  csd03.py  csd07.py  csd09.py  csd10.py  hat010.py  hat022.py  neopixel.py  pid10.py  pid13.py  pid26.py
robomation/core/: __init__.py  error.py  keyboard.py  model.py  permission.py  runner.py  scanner.py  serial_connector.py  utils.py
robomation/core/_internal/: _log.py  _scope.py  _sound.py  _tts.py
robomation/roboids/: __init__.py  beagle.py  beagle_roboid.py  cheesestick.py  cheesestick_roboid.py  hamster.py  hamster_roboid.py  hamster_s.py  hamster_s_roboid.py  pio.py  pio_roboid.py  raccoonbot.py  raccoonbot_roboid.py  turtle.py  turtle_roboid.py
