[build-system]
requires = ["setuptools>=77.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robomation"
dynamic = ["version"]
description = "Python library for Robomation robots and AI extensions"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Robomation", email = "info@robomation.co.kr" },
]
maintainers = [
    { name = "Jiwoo Jeong", email = "jwjeong@robomation.co.kr" },
]
keywords = ["robomation", "roboid", "robot", "education", "ai", "coding"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
]
dependencies = [
    "pyserial",                 # core: serial connector
    "SpeechRecognition",        # ai: ASR
    "sounddevice",              # ai: microphone capture
    "numpy",                    # ai / core
    "opencv-contrib-python",    # ai: camera + vision
    "mediapipe",                # ai: detection models
    "matplotlib",               # core: Utils.scope oscilloscope (_internal/_scope.py)
    "pynput",                   # core: Utils.keypressed (core/keyboard.py)
    'pygrabber; sys_platform == "win32"',
]

[project.urls]
Homepage = "https://robomation.net"
Repository = "https://github.com/RobomationLAB/Robomation_Python"
Documentation = "https://github.com/RobomationLAB/Robomation_Python/wiki"

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
"robomation" = ["py.typed"]

[tool.setuptools_scm]
fallback_version = "0.1.0"
local_scheme = "no-local-version"